# learn

./: .gitignore  CMakeLists.txt  README-Audio.md  README-Calibration.md  README-Meaning.md  README-Natural-TODO.md  README-Natural-v2.md  README-Natural-v4.md  README-Natural.md  README-Vision.md  README.md  Theory-Notes.md  notes
.circleci/: config.yaml  config.yml
attic/: README.md
attic/run-poc/: CMakeLists.txt  README.md  compute-mi.scm  launch-cogserver.scm
attic/run-ull-2019/: dict-comp-unk.scm  long.scm  long1  missy  sentences.txt  ull-golden.txt  x-shell.sh  x-test.conf  x.txt
attic/run-v3/: README-Natural-v3.md
fake/: CMakeLists.txt  README.md  fake.scm  print-dict.scm  random-dict.scm  sphere.scm  zipf.scm
learn-lang-diary/: README.md  Reading-List.md  connector-sets-revised.lyx  disjunct-stats.scm  entropy.lyx  lang.bib  learn-lang-diary-part-eight.lyx  learn-lang-diary-part-five.lyx  learn-lang-diary-part-four.lyx  learn-lang-diary-part-nine.lyx  learn-lang-diary-part-one.lyx  learn-lang-diary-part-seven.lyx  learn-lang-diary-part-six.lyx  learn-lang-diary-part-ten-B.lyx  learn-lang-diary-part-ten-C-appendix.lyx  learn-lang-diary-part-ten-C.lyx  learn-lang-diary-part-ten-D.lyx  learn-lang-diary-part-ten-E.lyx  learn-lang-diary-part-ten-F.lyx  learn-lang-diary-part-ten-G.lyx  learn-lang-diary-part-ten-H.lyx  learn-lang-diary-part-ten-I.lyx  learn-lang-diary-part-ten.lyx  learn-lang-diary-part-three.lyx  learn-lang-diary-part-two.lyx  learn-lang-diary.lyx  messaging.lyx  neuro-LG.lyx  notes-a  notes-b  recognizing-patterns-notes  recognizing-patterns.lyx  skippy.lyx  stitching.lyx  structuralism.lyx
learn-lang-diary/agi-2022/: grammar-induction.lyx
learn-lang-diary/agi-2022-lncs/: grammar-induction.lyx
learn-lang-diary/agi-2022-talk/: notes.md  simplex-connectors.dia  simplex-connectors.eps  topology-grammar.lyx
learn-lang-diary/agi-2025/: bib-notes  underexplored-ideas.lyx
learn-lang-diary/agi-2025-now/: here-and-now.lyx
learn-lang-diary/cimc-2025/: cimc.bib  sensori-motor.lyx
learn-lang-diary/drafts/: Chaining.lyx  Letter-Adam-2025-June.lyx  diary-notlsa.lyx  grammat.lyx
learn-lang-diary/en-sims-p3/: README.md  common-mi-dist.eps  common-mi-dist.gplot  common-mi-tsup.eps  condjacc-dist.eps  condjacc-dist.gplot  conlen-mi-scatter.eps  conlen-mi-scatter.gplot  conlenw-mi-scatter.eps  delta-mi-dist.eps  delta-mi-dist.gplot  djlen-dist.eps  djlen-dist.gplot  djlen-sect-dist.eps  djlen-word-dist.eps  mi-dist.eps  (+16 more)
opencog/: CMakeLists.txt  README.md
opencog/atoms/: CMakeLists.txt
opencog/atoms/sensory/: CMakeLists.txt  FileReadNode.cc  FileReadNode.h  PhraseStream.cc  PhraseStream.h  sensory.scm
opencog/atoms/sensory-types/: CMakeLists.txt  README.md  sensory_types.script  sensory_types_init.cc
opencog/examples/: demo.txt  file-read.scm
opencog/io/: CMakeLists.txt
run/: README.md  all-in-one.sh  run-tmux.sh  submit-one-netcat.pl  submit-one.pl
run-common/: CMakeLists.txt  README.md  cogserver-gram.scm  cogserver-lg.scm  cogserver-mst.scm  cogserver-pair.scm  cogserver.scm  export-dictionary.scm  file-block-process.sh  file-line-process.sh  file-nosplit-process.sh  file-split-process.sh  file-xform-process.sh  gen-dict.scm  halt-all.sh  marginals-mst-shape.scm  marginals-mst.scm  marginals-pair.scm  process-corpus.sh  socket-send.pl  split-objdump.pl  split-sentences.pl  submit-block.pl  submit-one.pl  submit-plain.pl  trim-pair.scm
run-common/attic/: README.md  gen-dict.scm  split-objdump.pl
run-config/: 0-pipeline.sh  1-corpus-conf.sh  1-dict-conf.scm  2-pair-conf-en.sh  2-pair-conf-fake.sh  2-pair-conf-objdump.sh  2-pair-conf.sh  3-mpg-conf-en.sh  3-mpg-conf-fake.sh  3-mpg-conf.sh  3-mst-conf.sh  4-gram-class.sh  4-gram-conf.sh  5-export-conf.sh  README.md
run-poc/: README.md  process-one.sh  redefine-mst-parser.scm  reset_database.sh  submit-one-block.pl  submit-one.pl  text-process.sh
scm/: CMakeLists.txt  README.md  agglo-loops.scm  agglo-rank.scm  batch-pair.scm  batch-word-pair.scm  cliques.scm  common.scm  compare.scm  cset-class.scm  cset-merge.scm  export-disjuncts.scm  gram-agglo.scm  gram-class-api.scm  gram-class.scm  gram-classification.scm  gram-fuzz.scm  gram-ingroup.scm  gram-majority.scm  gram-optim.scm  gram-pairwise.scm  gram-projective.scm  gram-vote.scm  in-group.scm  learn.scm  lg-compare.scm  lg-export.scm  link-class.scm  link-pipeline.scm  mst-parser.scm  pair-count-window.scm  pseudo-csets.scm  shape-project.scm  shape-vec.scm  similarity.scm  trim.scm  utilities.scm  vectors.scm  word-pair-count.scm
stream/: README.md
tests/: CMakeLists.txt  MI-calc-test-any.scm  MI-calc-test-clique.scm  MST-parse-test.scm  connector-data.scm  connector-merge-basic-tri.scm  connector-merge-basic.scm  connector-merge-cons-dbl.scm  connector-merge-cons.scm  connector-merge-full.scm  connector-merge-tri.scm  connector-merge-tricon.scm  connector-merge.scm  connector-setup.scm  pair-count-tests.scm  setup.scm
tests/merge/: CMakeLists.txt  balance-data.scm  class-data.scm  class-merge-basic.scm  class-merge-cons.scm  class-merge-cother.scm  connector-balance-bidonor.scm  connector-balance-both.scm  connector-balance-several.scm  connector-balance-tridonor.scm  connector-balance.scm  connector-data.scm  connector-merge-basic-tri.scm  connector-merge-basic.scm  connector-merge-cone.scm  connector-merge-conext.scm  connector-merge-conin.scm  connector-merge-conind.scm  connector-merge-cons-dbl.scm  connector-merge-cons.scm  connector-merge-tri.scm  connector-merge-tricon-dbl.scm  connector-merge-tricon.scm  connector-merge-triconind.scm  connector-setup.scm  shape-data.scm  shape-merge.scm
tests/old/: README.md  setup.scm
version-one/: README-Architecture.md  README-Audio.md  README-Calibration.md  README-Meaning.md  README-Natural-v4.md  README.md  notes
version-one/run-common/: CMakeLists.txt  README.md  cogserver-lg.scm  cogserver-mst.scm  cogserver-pair.scm  file-xform-process.sh  marginals-pair.scm  process-corpus.sh  socket-send.pl  submit-block.pl  submit-lines.pl
version-one/run-common/attic/: README.md
(+647 files in other folders)
